# zap

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  example-zap.toml  shell.nix  zap.toml
site/: CHANGELOG.md  README.md  test-syntax.md
site/configuration/: css-configuration.md  index.md  main-configuration.md  nix-home-manager.md
site/configuration/plugins/: file-search.md  projects.md
site/installation/: index.md  using-waycast.md
theme/: changelog.html  doc.html  home.html  package.json  page.html  style.css
theme/layouts/: base.html
theme/themes/: amethyst.css  brutal.css  bubblegum.css  candyland.css  catpuccin.css  claude.css  default.css  doom.css  violet.css
zap-cli/: Cargo.toml
zap-cli/src/: config.rs  main.rs
zap-cli/src/cmd/: build.rs  serve.rs
zap-core/: Cargo.toml
zap-core/src/: builder.rs  config.rs  lib.rs  markdown.rs  renderer.rs  scanner.rs  site.rs  template.rs
zap-dev-server/: Cargo.toml
zap-dev-server/src/: lib.rs
zap-render/: Cargo.toml
