[workspace]
members = ["zap-cli", "zap-core", "zap-dev-server"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Javier Feliz <me@javierfeliz.com>"]
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Get a website for your project in seconds, with no configuration"
homepage = "https://gitgud.foo/javif89/zap"
repository = "https://gitgud.foo/javif89/zap"
categories = ["ssg"]
keywords = ["ssg", "static-site"]
