[package]
name = "zap-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tera = "1.20.0"
zap-core = { path = "../zap-core" }
