[package]
name = "zap-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
config = "0.15.16"
notify = "6.1"
notify-debouncer-mini = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tera = "1.20.0"
tokio = { version = "1.0", features = ["full"] }
zap-core = { path = "../zap-core" }
zap-dev-server = { path = "../zap-dev-server" }
