[package]
name = "zap-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
pulldown-cmark = "0.13.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_toml = "0.0.1"
toml = "0.9.6"
walkdir = "2.5.0"
