[package]
name = "zap-dev-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["ws"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
open = "5.3.2"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
